crates/vize_canon/src/snapshots/vize_canon__tests__virtual_ts_tests__virtual_ts_with_composables.snap
---
source: crates/vize_canon/src/tests.rs
expression: virtual_ts
---
/// <reference lib="es2022" />
/// <reference lib="dom" />
/// <reference lib="dom.iterable" />
// ============================================
// Virtual TypeScript for Vue SFC Type Checking
// Generated by vize
// ============================================

// ImportMeta augmentation (reference existing framework types)
/// <reference types="vite/client" />
declare global {
  // Extend ImportMeta with Nuxt-specific properties not covered by vite/client
  interface ImportMeta {
    readonly client: boolean;
    readonly server: boolean;
    readonly dev: boolean;
    readonly prod: boolean;
    readonly ssr: boolean;
  }
}

// ========== Module Scope (imports) ==========
type __EmitShape<T> = T extends (...args: any[]) => any ? T : T extends Record<string, any> ? { [K in keyof T]: T[K] extends (...args: infer A) => any ? A : T[K] extends any[] ? T[K] : any[]; } : Record<string, any[]>;
type __EmitArgs<T, K extends keyof T> = T[K] extends any[] ? T[K] : any[];
type __EmitFn<T> = __EmitShape<T> extends (...args: any[]) => any ? __EmitShape<T> : (<K extends keyof __EmitShape<T>>(event: K, ...args: __EmitArgs<__EmitShape<T>, K>) => void);
import { useMouse } from '@vueuse/core'

// ========== Exported Types ==========
export type Props = {};

// ========== Setup Scope ==========
function __setup() {
  // Compiler macros (only valid in setup scope, not global)
  // Emit type helper: converts { event: [args] } to callable emit function
  type __EmitShape<T> = T extends (...args: any[]) => any ? T : T extends Record<string, any> ? { [K in keyof T]: T[K] extends (...args: infer A) => any ? A : T[K] extends any[] ? T[K] : any[]; } : Record<string, any[]>;
  type __EmitArgs<T, K extends keyof T> = T[K] extends any[] ? T[K] : any[];
  type __EmitFn<T> = __EmitShape<T> extends (...args: any[]) => any ? __EmitShape<T> : (<K extends keyof __EmitShape<T>>(event: K, ...args: __EmitArgs<__EmitShape<T>, K>) => void);
  type __RuntimePropCtor<T> = T extends readonly (infer U)[] ? __RuntimePropCtor<U> : T extends { type: infer U } ? __RuntimePropCtor<U> : T extends StringConstructor ? string : T extends NumberConstructor ? number : T extends BooleanConstructor ? boolean : T extends ArrayConstructor ? unknown[] : T extends ObjectConstructor ? Record<string, unknown> : T extends DateConstructor ? Date : T extends FunctionConstructor ? (...args: any[]) => any : unknown;
  type __RuntimePropResolved<T> = T extends { required: true } ? true : T extends { default: any } ? true : false;
  type __RuntimePropShape<T extends Record<string, any>> = { [K in keyof T]: __RuntimePropResolved<T[K]> extends true ? __RuntimePropCtor<T[K]> : __RuntimePropCtor<T[K]> | undefined; };
  type __DefaultFactory<T> = (props: any) => T;
  type __WithDefaultValue<T> = T | __DefaultFactory<T>;
  type __WithDefaultsArgs<T> = { [K in keyof T]?: __WithDefaultValue<T[K]> };
  type __WithDefaultsResult<T, D extends __WithDefaultsArgs<T>> = Omit<T, keyof D> & { [K in keyof D & keyof T]-?: T[K] };
  // Vue ref type aliases (resolved from node_modules/vue)
  type __Ref<T> = import('vue').Ref<T>;
  type __ShallowRef<T> = import('vue').ShallowRef<T>;
  function defineProps<_T = unknown>(): _T;
  function defineProps<const _T extends readonly string[]>(_props: _T): { [K in _T[number]]?: any };
  function defineProps<const _T extends Record<string, any>>(_props: _T): __RuntimePropShape<_T>;
  function defineProps(_props?: any) { void _props; return undefined as any; }
  function defineEmits<_T = unknown>(): __EmitFn<_T>;
  function defineEmits<const _T extends readonly string[]>(_events: _T): (event: _T[number], ...args: any[]) => void;
  function defineEmits<const _T extends Record<string, any>>(_events: _T): __EmitFn<_T>;
  function defineEmits(_events?: any) { void _events; return (() => {}) as any; }
  function defineExpose<_T = unknown>(_exposed?: _T): void { void _exposed; }
  function defineModel<_T = unknown>(): __Ref<_T | undefined>;
  function defineModel<_T = unknown>(_options: any): __Ref<_T>;
  function defineModel<_T = unknown>(_name: string, _options?: any): __Ref<_T>;
  function defineModel(_name_or_options?: any, _options?: any) { void _name_or_options; void _options; return undefined as any; }
  function defineSlots<_T = unknown>(): _T { return undefined as unknown as _T; }
  function withDefaults<_T, _D extends __WithDefaultsArgs<_T>>(_props: _T, _defaults: _D): __WithDefaultsResult<_T, _D> { void _props; void _defaults; return undefined as unknown as __WithDefaultsResult<_T, _D>; }
  function useTemplateRef<_T = any>(_key: string): __ShallowRef<_T | null> { void _key; return undefined as unknown as __ShallowRef<_T | null>; }
  // Mark compiler macros as used
  void defineProps; void defineEmits; void defineExpose; void defineModel; void defineSlots; void withDefaults; void useTemplateRef;

  // User setup code
  
  
  const { x, y } = useMouse()
  
  // @vize-map: 4863:4902 -> 0:70

  // ========== Template Scope (inherits from setup) ==========
  ;(function __template() {
    // Vue template context (delegates to ComponentPublicInstance)
    type __Ctx = import('vue').ComponentPublicInstance;
    const __ctx = undefined as unknown as __Ctx;
    const $attrs = __ctx.$attrs;
    const $slots = __ctx.$slots;
    const $refs = __ctx.$refs;
    const $emit = __ctx.$emit;
    void __ctx; void $attrs; void $slots; void $refs; void $emit;

  void (x); // Interpolation
  // @vize-map: expr -> 147:148
  void (y); // Interpolation
  // @vize-map: expr -> 156:157

  // Reference setup bindings (used in template/CSS v-bind)
  void useMouse; void x; void y;
  })();
}

// Invoke setup to verify types
void __setup();

export type Emits = {};
export type Slots = {};

// ========== Default Export ==========
type __VizeComponentInstance = {
  $props: Props;
  $emit: __EmitFn<Emits>;
  $slots: Slots;
};
declare const __vize_component__: new (...args: any[]) => __VizeComponentInstance;
export default __vize_component__;
